AWS/Lesson-8/first-build/infra/security-groups.tf
resource "aws_security_group" "mysqldb" {
	name = "mysqldb"
	vpc_id = aws_vpc.main.id
	ingress {
		from_port = 3306
		to_port = 3306
		protocol = "tcp"
		security_groups = [aws_security_group.mysqlui.id]
	}

	ingress {
		from_port = 22
		to_port = 22
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	egress {
		from_port = 0
		to_port = 0
		protocol = "-1"
		cidr_blocks = ["0.0.0.0/0"]
	}

	tags = {
		Name = "mysqldb-sg"
	}
}

resource "aws_security_group" "mysqlui" {
	name = "mysqlui"
	vpc_id = aws_vpc.main.id
	ingress {
		from_port = 8080
		to_port = 8080
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	ingress {
		from_port = 22
		to_port = 22
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	egress {
		from_port = 0
		to_port = 0
		protocol = "-1"
		cidr_blocks = ["0.0.0.0/0"]
	}

	tags = {
		Name = "mysqlui-sg"
	}
}
